fixed olalignment

--- a/css/styles.css
+++ b/css/styles.css
@@ -5,6 +5,12 @@
   text-align: center;
 }
 
+.mildlyimportant {
+  color: darkred;
+  text-align: left;
+  margin-left: 5%;
+}
+
 .column {
   width: 33%;
   float: left
@@ -16,6 +22,8 @@
   padding: 10px;
   width: 100%;
 }
+
+
 
 img {
   border: 10px  green;
@@ -50,8 +58,6 @@ h4 {
 }
 
 p {
-  margin: 30px;
-  padding: 20px;
   font-family: sans-serif;
   font-size: medium
 
@@ -67,3 +73,4 @@ ol {
   margin-right:30%;
 
 }
+
